@@ -3,10 +3,13 @@ package com.lahuca.lanecontroller;
 import com.github.benmanes.caffeine.cache.Cache;
 import com.github.benmanes.caffeine.cache.Caffeine;
 import com.lahuca.lane.LaneParty;
+import com.lahuca.lane.connection.packet.PartyPacket;
+import com.lahuca.lane.data.replicated.AuthoritativeObject;
 import com.lahuca.lane.queue.QueueRequestParameter;
 import com.lahuca.lane.queue.QueueRequestParameters;
 import com.lahuca.lane.records.PartyRecord;
-import com.lahuca.lane.records.RecordConverter;
+import com.lahuca.lanecontroller.events.party.*;
+import net.kyori.adventure.text.Component;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
@@ -16,7 +19,7 @@ import java.util.concurrent.TimeUnit;
  * @author _Neko1
  * @date 14.03.2024
  **/
-public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> {
+public class ControllerParty implements LaneParty, AuthoritativeObject<Long, PartyRecord> {
 
     // TODO Do we maybe want to add roles to party members? This could for example allow other players to kick players instead of only the owner.
 
@@ -28,6 +31,8 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
     private final Cache<@NotNull UUID, String> invitations;
     private final long creationTimestamp;
 
+    private final HashSet<String> replicatedSubscribers = new HashSet<>();
+
     ControllerParty(long partyId, ControllerPlayer owner) {
         Objects.requireNonNull(owner, "owner is null");
         if (owner.getParty().isPresent()) throw new IllegalStateException("owner is already in a party");
@@ -36,7 +41,8 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
         setOwner(owner);
         // TODO we cannot do owner.setPartyId here due to the object not being registered yet
 
-        invitations = Caffeine.newBuilder().expireAfterWrite(5, TimeUnit.MINUTES).build();
+        invitations = Caffeine.newBuilder().expireAfterWrite(5, TimeUnit.MINUTES)
+                .removalListener((key, value, cause) -> clearSoloParty()).build(); // TODO Expire event and packet?
         creationTimestamp = System.currentTimeMillis();
     }
 
@@ -55,12 +61,13 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
     }
 
     @Override
-    public HashSet<UUID> getPlayers() {
-        return new HashSet<>(Set.copyOf(players));
+    public Set<UUID> getPlayers() {
+        return Collections.unmodifiableSet(players);
     }
 
     /**
      * Returns the party's players as a {@link HashSet} ofo {@link ControllerPlayer} objects.
+     *
      * @return the controller players in this party
      */
     public HashSet<ControllerPlayer> getControllerPlayers() {
@@ -81,6 +88,7 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
         return getPlayers().contains(player.getUuid());
     }
 
+    @Override
     public boolean isInvitationsOnly() {
         return invitationsOnly;
     }
@@ -91,7 +99,12 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
      * @param invitationsOnly if new players need to be invited
      */
     public void setInvitationsOnly(boolean invitationsOnly) {
+        boolean old = this.invitationsOnly;
         this.invitationsOnly = invitationsOnly;
+        if(old != invitationsOnly) {
+            Controller.getInstance().handleControllerEvent(new PartySetInvitationsOnlyEvent(this, invitationsOnly));
+            Controller.getInstance().getConnection().sendPacket(getReplicatedSubscribers(), new PartyPacket.Event.SetInvitationsOnly(partyId, invitationsOnly, convertRecord()));
+        }
     }
 
     @Override
@@ -100,8 +113,13 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
     }
 
     @Override
+    public Set<UUID> getUnmodifiableInvitations() {
+        return Collections.unmodifiableSet(invitations.asMap().keySet());
+    }
+
+    @Override
     public PartyRecord convertRecord() {
-        return new PartyRecord(partyId, owner, players, invitationsOnly, creationTimestamp);
+        return new PartyRecord(partyId, owner, players, invitationsOnly, creationTimestamp, getUnmodifiableInvitations());
     }
 
     @Override
@@ -113,7 +131,26 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
                 .add("invitationsOnly=" + invitationsOnly)
                 .add("invitations=" + invitations)
                 .add("creationTimestamp=" + creationTimestamp)
+                .add("replicatedSubscribers=" + replicatedSubscribers)
                 .toString();
+    }
+
+    @Override
+    public HashSet<String> getReplicatedSubscribers() {
+        HashSet<String> subscribers = new HashSet<>(replicatedSubscribers);
+        // Next to the subscribed instances, there are additional subscribers: the different instances of the party members
+        getPlayers().forEach(uuid -> Controller.getPlayer(uuid).flatMap(ControllerPlayer::getInstanceId).ifPresent(subscribers::add));
+        return subscribers;
+    }
+
+    @Override
+    public void subscribeReplicated(String subscriber) {
+        replicatedSubscribers.add(subscriber);
+    }
+
+    @Override
+    public void unsubscribeReplicated(String subscriber) {
+        replicatedSubscribers.remove(subscriber);
     }
 
     public Cache<@NotNull UUID, String> getInvitations() {
@@ -141,9 +178,12 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
      * @throws IllegalArgumentException if {@code player} is null
      */
     public boolean addInvitation(ControllerPlayer player) {
-        if (player == null) throw new IllegalArgumentException("player is null"); // TODO Check this in the whole codebase!
+        if (player == null)
+            throw new IllegalArgumentException("player is null"); // TODO Check this in the whole codebase!
         if (!isInvitationsOnly() || hasInvitation(player) || containsPlayer(player)) return false;
         invitations.put(player.getUuid(), player.getUsername());
+        Controller.getInstance().handleControllerEvent(new PartyAddInvitationEvent(this, player));
+        Controller.getInstance().getConnection().sendPacket(getReplicatedSubscribers(), new PartyPacket.Event.AddInvitation(partyId, player.getUuid(), convertRecord()));
         return true;
     }
 
@@ -163,6 +203,8 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
         invitations.invalidate(player.getUuid());
         players.add(player.getUuid());
         player.setPartyId(partyId);
+        Controller.getInstance().handleControllerEvent(new PartyAcceptInvitationEvent(this, player));
+        Controller.getInstance().getConnection().sendPacket(getReplicatedSubscribers(), new PartyPacket.Event.AcceptInvitation(partyId, player.getUuid(), convertRecord()));
         return true;
     }
 
@@ -179,6 +221,8 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
         if (!isInvitationsOnly() || !hasInvitation(player) || containsPlayer(player)) return false;
         if (invitations.getIfPresent(player.getUuid()) == null) return false;
         invitations.invalidate(player.getUuid());
+        Controller.getInstance().handleControllerEvent(new PartyDenyInvitationEvent(this, player));
+        Controller.getInstance().getConnection().sendPacket(getReplicatedSubscribers(), new PartyPacket.Event.DenyInvitation(partyId, player.getUuid(), convertRecord()));
         return true;
     }
 
@@ -186,6 +230,7 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
      * Joins the party for the given player.
      * This only works when the party is not in invitation-only mode, i.e., everyone can join freely.
      * The given player should not be in another party.
+     *
      * @param player the player
      * @return {@code true} if the player is now in the party, otherwise {@code false}
      * @throws IllegalArgumentException if {@code player} is null
@@ -197,11 +242,14 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
         players.add(player.getUuid());
         player.setPartyId(partyId);
         invitations.invalidate(player.getUuid());
+        Controller.getInstance().handleControllerEvent(new PartyJoinPlayerEvent(this, player));
+        Controller.getInstance().getConnection().sendPacket(getReplicatedSubscribers(), new PartyPacket.Event.JoinPlayer(partyId, player.getUuid(), convertRecord()));
         return true;
     }
 
     /**
      * Removes the player from the party.
+     *
      * @param player the player
      * @return {@code true} if the player has been removed from the party, otherwise {@code false}
      * @throws IllegalArgumentException if {@code player} is null
@@ -209,17 +257,41 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
     public boolean removePlayer(ControllerPlayer player) {
         if (player == null) throw new IllegalArgumentException("player is null");
         if (!containsPlayer(player)) return false;
-        if (getOwner().equals(player.getUuid())) return false;
         invitations.invalidate(player.getUuid());
+        if (getOwner().equals(player.getUuid())) {
+            if (disband()) {
+                Component message = Component.translatable("lane.controller.party.ownerLeave"); // TODO Add setting to not send message?
+                getPlayers().forEach(uuid -> Controller.getInstance().sendMessage(uuid, message));
+                return true;
+            }
+            return false;
+        }
         players.remove(player.getUuid());
         player.setPartyId(null);
+        if(!clearSoloParty()) {
+            Controller.getInstance().handleControllerEvent(new PartyRemovePlayerEvent(this, player));
+            Controller.getInstance().getConnection().sendPacket(getReplicatedSubscribers(), new PartyPacket.Event.RemovePlayer(partyId, player.getUuid(), convertRecord()));
+        }
         return true;
+    }
+
+    public boolean clearSoloParty() {
+        if (isSoloParty() && isInvitationsOnly() && getInvitations().estimatedSize() == 0) {
+            // Private and only one person left
+            if (disband()) {
+                Component message = Component.translatable("lane.controller.party.clearSoloParty"); // TODO Add setting to not send message?
+                getPlayers().forEach(uuid -> Controller.getInstance().sendMessage(uuid, message));
+                return true;
+            }
+        }
+        return false;
     }
 
     /**
      * Delegation of the method in the controller {@link ControllerPartyManager#disbandParty(ControllerParty)},
      * due to complete removal of the object.
      * Disbands this party: removes this party object and sets the party of all players to null.
+     *
      * @return {@code true} when the party has been removed, {@code false} otherwise
      * @see ControllerPartyManager#disbandParty(ControllerParty)
      */
@@ -239,34 +311,37 @@ public class ControllerParty implements LaneParty, RecordConverter<PartyRecord> 
         if (player == null) throw new IllegalArgumentException("player is null");
         if (!containsPlayer(player)) return false; // TODO Also check on the player itself?
         owner = player.getUuid();
+        Controller.getInstance().handleControllerEvent(new PartySetOwnerEvent(this, player));
+        Controller.getInstance().getConnection().sendPacket(getReplicatedSubscribers(), new PartyPacket.Event.SetOwner(partyId, player.getUuid(), convertRecord()));
         return true;
     }
 
     /**
      * Warps all party members to the owner's game/instance.
      * This is different from when the owner joins a game, as a party join is automatically applied in that case
+     *
      * @return {@code true} whether the party has been warped, {@code false} otherwise
      */
     public boolean warpParty() {
         Optional<ControllerPlayer> ownerOpt = Controller.getInstance().getPlayerManager().getPlayer(getOwner());
-        if(ownerOpt.isEmpty()) return false;
+        if (ownerOpt.isEmpty()) return false;
         ControllerPlayer player = ownerOpt.get();
         QueueRequestParameters queue;
-        if(player.getGameId().isPresent()) {
-            queue = QueueRequestParameter.create().gameId(player.getGameId().get()).buildParameters();
-        } else if(player.getInstanceId().isPresent()) {
-            queue = QueueRequestParameter.create().instanceId(player.getInstanceId().get()).buildParameters();
+        if (player.getGameId().isPresent()) {
+            queue = QueueRequestParameter.create().gameId(player.getGameId().get()).partySkip(false).buildParameters();
+        } else if (player.getInstanceId().isPresent()) {
+            queue = QueueRequestParameter.create().instanceId(player.getInstanceId().get()).partySkip(false).buildParameters();
         } else {
             return false;
         }
         getControllerPlayers().forEach(current -> {
-            if(!current.getUuid().equals(player.getUuid())) {
+            if (!current.getUuid().equals(player.getUuid())) {
                 current.queue(queue); // TODO What if any of them fail?
             }
         });
+        Controller.getInstance().handleControllerEvent(new PartyWarpEvent(this));
+        Controller.getInstance().getConnection().sendPacket(getReplicatedSubscribers(), new PartyPacket.Event.Warp(partyId));
         return true;
     }
-
-
 
 }
